--- a/fe_StudyWithCJ/package.json
+++ b/fe_StudyWithCJ/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.19.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2"
   },
