--- a/fe_StudyWithCJ/package.json
+++ b/fe_StudyWithCJ/package.json
@@ -14,11 +14,15 @@
     "framer-motion": "^12.19.1",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^3.0.2",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
